# Loan-Approval-Predictor-

./: .gitignore  Evaluation Project 6 Loan Application Status Prediction-Copy1.ipynb  README.md  SECURITY.md  loan_predictor.py  loan_utils.py  pyproject.toml  requirements.txt
src/: data_preprocessing.py  feature_engineering.py  model.py
tests/: conftest.py  test_data_preprocessing.py  test_feature_engineering.py  test_model.py
